# onitama-vision

./: .gitignore  LICENSE  README.md  pyproject.toml
ai/: agent.py  controllers.py  evaluate.py  search.py  types.py
assets/vision/: calibration.json
cli/: controllers.py  play.py  render.py
data/vision/: calibration.json  card_rois.json
docs/: hoja_ruta_integracion_final.md  pendiente.md  resumen_flujo_vision.md  resumen_gui.md  resumen_proyecto_primera_parte.md  resumen_training_cartas.md
docs/memoria/: proyecto.tex
docs/memoria/apendices/: A_Guia_montaje_uso.tex
docs/memoria/bibliografia/: bibliografia.bib
docs/memoria/capitulos/: 01_Introduccion.tex  02_Fundamentos_teoricos_tecnologicos.tex  (+5 more)
models/: cards_yolo11n-cls_320_best.pt
onitama/: cards.py  controllers.py  moves.py  rules.py  state.py
scripts/: bench_search.py  tournament.py
scripts/ai/: bench_search.py  tournament.py
scripts/vision/: build_snapshot.py  calibrate_homography.py  capture_padded_dataset.py  debug_capture_padded_warp.py  debug_click_to_cell.py  debug_manual_piece_state.py  debug_snapshot_to_game_state.py  eval_vision_pipeline.py  eval_vision_pipeline_offline.py  preview_card_rois_real.py  preview_homography.py
src/onitama/: errors.py
tests/: test_apply_action_purity.py  test_card_swap.py  test_cards_orientation.py  test_engine_rules.py  test_game_state_synchronizer.py  test_initial_state.py  test_pass.py  test_pass_action.py  test_state_stabilizer.py  test_vision_board.py  test_vision_board_bridge.py  test_vision_card_classifier.py  test_vision_card_rois.py  test_vision_game_session.py  test_vision_homography.py  test_vision_piece_detector.py  test_vision_pipeline.py  test_vision_play.py  test_vision_snapshot.py  test_vision_snapshot_to_game_state.py  test_winner.py
(+67 files in other folders)
