[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-onitama"
version = "0.1.0"
description = "Onitama engine + CLI"
requires-python = ">=3.10"

[project.scripts]
onitama-vision = "onitama.gui.vision_app:main"

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
