[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onitama-vision"
version = "1.0.0"
description = "Onitama engine, AI, and vision-assisted GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "numpy",
    "opencv-python",
    "ultralytics",
    "pytest>=8",
]

[project.scripts]
onitama-vision = "onitama.gui.vision_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
